syntax = "proto3";
package message_scheduler;

option go_package = "proto/gen";

message IngestRecord {
  repeated ScheduledNotification scheduledNotifications = 1;
}

message ScheduledNotification {
  string correlationId = 1;

  enum MessageType {
    PUSH_NOTIFICATION = 0;
    EMAIL = 1;
  }

  MessageType messageType = 2;
  int64 scheduledTimeMillis = 3;

  message Metadata {
      string message = 1;
  }

  Metadata metadata = 4;
}
